force-app/main/default/objects/Contact/fields/Active_Insurance_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Insurance_Count__c</fullName>
    <description>Auto-maintained by the Insurance recalculation flow. Total number of active coverage plans the contact holds = sum of Medical/Dental/Vision across the contact&apos;s active-policy associations (ContactInsuranceAssociation where linked Insurance Status = Active), counting at least 1 per active policy. E.g. one group-health policy with Medical+Dental+Vision = 3; a Medicare policy = 1. Do not edit manually. (가입 플랜 수 - 자동 계산, 수동 편집 금지)</description>
    <inlineHelpText>Auto-calculated total number of active plans (Medical/Dental/Vision counted separately, min 1 per policy); do not edit manually. (활성 플랜 수 자동 계산. 수동 편집 금지.)</inlineHelpText>
    <label>Total Plans</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>