force-app/main/default/objects/Contact/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Automatically calculates the person’s age in years based on the Birthdate field.</description>
    <formula>IF(
    ISBLANK(Birthdate),
    NULL,
    YEAR(TODAY()) - YEAR(Birthdate) -
    IF(
        DATE(YEAR(TODAY()), MONTH(Birthdate), DAY(Birthdate)) &gt; TODAY(),
        1,
        0
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field calculates the current age based on the Birthdate. It is updated dynamically and does not require manual changes.</inlineHelpText>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>