force-app/main/default/objects/Contact/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto-maintained by the Family recalculation flow. TRUE when the contact has at least one household member — a Contact whose Primaryholder = this contact (spouse/child/dependent on file) — indicating the person enrolled with family rather than alone. Do not edit manually. (가족 동반 여부 - 디펜던트 등록 시 자동 체크, 수동 편집 금지)</description>
    <inlineHelpText>Auto-set when a spouse/child/dependent (household member) is on file for this contact; do not edit manually. (가족(디펜던트)이 등록돼 있으면 자동 체크. 수동 편집 금지.)</inlineHelpText>
    <label>Family</label>
    <type>Checkbox</type>
</CustomField>