force-app/main/default/objects/Contact/fields/Has_Active_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Has_Active_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto-maintained by the Insurance recalculation flow. TRUE when the contact currently holds at least one active-policy insurance (ContactInsuranceAssociation where the linked Insurance Status = Active). Do not edit manually. (활성 보험 보유 여부 - 자동 계산, 수동 편집 금지)</description>
    <inlineHelpText>Auto-calculated from the contact&apos;s active insurance associations; do not edit manually. (활성 보험 연결에서 자동 계산됩니다. 수동 편집 금지.)</inlineHelpText>
    <label>Active Ins</label>
    <type>Checkbox</type>
</CustomField>