force-app/main/default/objects/Contact/fields/Last_Year_Expected_Income__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Expected_Income__c</fullName>
    <description>Contact&apos;s total income for the PRIOR calendar year, in whole US dollars.
Used as a baseline/comparison against This_Year_Expected_Income__c for income trend and coverage decisions.
Whole dollars, no cents.</description>
    <inlineHelpText>The contact&apos;s income for LAST year (whole dollars, no cents). Example: 80000</inlineHelpText>
    <label>Last Year Expected Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>