force-app/main/default/objects/Contact/fields/This_Year__c.field-meta.xml
<CustomField>
    <fullName>This_Year__c</fullName>
    <description>The 4-digit calendar year that This_Year_Expected_Income__c refers to (e.g., 2026).
Number, no decimals. Lets reports pin the &quot;this year&quot; income figure to a specific year.</description>
    <formula>YEAR(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The 4-digit calendar year the &quot;This Year Expected Income&quot; applies to. Example: 2026</inlineHelpText>
    <label>This Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>