force-app/main/default/objects/Contact/fields/This_Year_Expected_Income__c.field-meta.xml
<CustomField>
    <fullName>This_Year_Expected_Income__c</fullName>
    <description>Contact&apos;s projected total income for the current calendar year, in whole US dollars.
Entered by producers during quoting/underwriting to size coverage and premium.
Whole dollars, no cents. Pairs with This_Year__c, which stores the year this figure applies to.</description>
    <inlineHelpText>The contact&apos;s expected total income for THIS year (whole dollars, no cents). Example: 85000</inlineHelpText>
    <label>This Year Expected Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>