force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>Korean_Name__c</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>Agent__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>