force-app/main/default/objects/Contact/listViews/Client_Contacts.listView-meta.xml
<ListView>
    <fullName>Client_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>Korean_Name__c</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <columns>Agent__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.IS_PERSON_ACCOUNT</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>FULL_NAME</field>
        <operation>notContain</operation>
        <value>agent</value>
    </filters>
    <label>Client Contacts</label>
</ListView>